--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Biryani:300,400,900');
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Biryani', sans-serif;
+  color: #000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.gradient {
+  height: 100vh;
+  width: 100vw;
 }
